# llm-cli

./: Cargo.toml  LICENSE  README.md  lmstudio-setup.sh  test_streaming.sh
examples/: streaming_demo.sh  streaming_table_demo.sh
src/: api.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  session.rs  streaming_buffer.rs  ui.rs
tests/: config_tests.rs  integration_tests.rs  streaming_test.rs  table_test.rs  test_code_highlighting.rs  test_hybrid_markdown.rs  test_streaming_markdown.rs
